# Poneglyph

./: .env.example  .gitignore  ARCHITECTURE.md  CAPABILITIES.md  CLAUDE.md  EVALS.md  FAILURE_MODES.md  HooksSetup.md  METHODOLOGY.md  README.md  pre-commit  pyproject.toml  requirements.txt
backend/: constants.py  main.py  orchestrator.py  pyproject.toml  requirements.txt  seed_demo.py
backend/agents/: __init__.py  archivist.py  auditor.py  briefing.py  drafter.py  scout.py  scribe.py  test_archivist.py  test_auditor.py  test_briefing.py  test_drafter.py  test_scout.py  test_scout_minimal.py  test_scribe.py
backend/agents/donor_templates/: world_bank.md
backend/data/projects/mp-fpc-2024/: logframe.md  project.yaml  timeline.md
backend/data/projects/mp-fpc-2024/commitments/: cmt-00c1a434.md  cmt-216781a7.md  cmt-2213e6cd.md  cmt-240aa61f.md  cmt-3aa3f641.md  cmt-3b151e2e.md  cmt-4adf0d93.md  cmt-4bf7d3d1.md  cmt-55f611c6.md  cmt-59881475.md  cmt-5d6a20e4.md  cmt-5eca0de8.md  cmt-67b9c1b2.md  cmt-6a12a04e.md  cmt-6a3f7831.md  cmt-6ccaa3d3.md  cmt-71291761.md  cmt-79c51438.md  cmt-7b66cdbf.md  cmt-7fb104d4.md  cmt-8511561c.md  cmt-87ce327f.md  cmt-91bc56f8.md  cmt-9a489c0c.md  cmt-9e11b5a1.md  cmt-9f5a16d9.md  cmt-a23839d3.md  cmt-ae3e56ed.md  cmt-b1567429.md  cmt-b6547820.md  cmt-c61f4242.md  cmt-ca15f580.md  cmt-cce5fe3a.md  cmt-cf604a5b.md  cmt-d2471b29.md  cmt-d99bde0c.md  cmt-dba97198.md  cmt-ffe32c81.md
backend/data/projects/mp-fpc-2024/evidence/: ev-02e4e5dd.md  ev-0cb74d9d.md  ev-0cd76dc7.md  ev-0dd56ba1.md  ev-1ccf7cf8.md  ev-1fcdc26f.md  ev-214d2fa3.md  ev-245697dc.md  ev-25db1ec5.md  ev-2cf22770.md  ev-2d796ee0.md  ev-33111671.md  ev-39082c1a.md  ev-3d0f1bd4.md  ev-3e7f29c4.md  ev-3ec34dc4.md  ev-41e97f90.md  ev-4306f3e4.md  ev-46f0fd3e.md  ev-527f6913.md  ev-5770c44b.md  ev-5d8eb0dc.md  ev-61168502.md  ev-658c37a1.md  ev-6749ac5d.md  ev-718860b5.md  ev-85850d40.md  ev-8e47014f.md  ev-8e8d6b06.md  ev-9040f0d8.md  ev-9230351b.md  ev-9fa2ef9e.md  ev-a033d0f8.md  ev-a7f0cb5a.md  ev-a97a50ce.md  ev-b105b735.md  ev-b56113fc.md  ev-b6df8b21.md  ev-bcb0a910.md  ev-c1f0be71.md  (+12 more)
backend/data/projects/mp-fpc-2024/meetings/: mtg-1b366120.md  mtg-261d8028.md  mtg-53440b88.md  mtg-590b392e.md  mtg-77a9ba80.md  mtg-9e2577ad.md
backend/demo/: __init__.py  canonical_flow.py  demo_project.py
backend/memory/: __init__.py  models.py  project_memory.py  test_memory.py
data/projects/mp-fpc-2024/: project.yaml  timeline.md
data/synthetic/: generate_test_images.py
data/synthetic/meetings/: meeting_001.txt  meeting_002.txt
evals/: results.json  run_all.py  score.py
evals/auditor_eval/: ground_truth.json
evals/contradiction_eval/: contradiction_meeting_01a.txt  contradiction_meeting_01b.txt  contradiction_meeting_02a.txt  contradiction_meeting_02b.txt  contradiction_meeting_03a.txt  contradiction_meeting_03b.txt  ground_truth.json
evals/scout_eval/: generate_eval_images.py  ground_truth.json
evals/scribe_eval/: ground_truth.json  meeting_eval_01.txt  meeting_eval_02.txt  meeting_eval_03.txt  meeting_eval_04.txt  meeting_eval_05.txt
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
project_memory_example/: logframe.md  project.yaml  timeline.md
project_memory_example/commitments/: cmt-001.md  cmt-002.md
project_memory_example/evidence/: ev-001.md  ev-002.md  ev-003.md
project_memory_example/meetings/: mtg-001.md
prompts/: archivist.md  auditor.md  briefing.md  drafter.md  scout.md  scribe.md
sessions/: 001-bootstrap.md  002-project-memory.md  003-scout.md  004-scribe-archivist.md  005-drafter-auditor.md  006-orchestrator.md  007-demo-mode.md  008-frontend-polish.md  008.5-ux-overhaul.md  009-evals.md  010a-briefing.md  010b-entry-screen.md  011-saturday-night-rebuild.md  012-saturday-night-part2.md
(+28 files in other folders)
